@@ -6,6 +6,11 @@
 This page summarizes the main new features that are introduced in each PRADO release.
 </p>
 
+<h2>Version 3.1.2</h2>
+<ul>
+<li>Added a new active control <a href="?page=ActiveControls.ActivePager">TActivePager</a> that allows to paginate a databound control with an ajax callback.</li>
+</ul>
+
 <h2>Version 3.1.1</h2>
 <ul>
 <li>Added a new control <a href="?page=Controls.TabPanel">TTabPanel</a> that displays tabbed views.</li>
