@@ -26,6 +26,7 @@ ENH: Added TAuthManager.switchUser() (Qiang)
 NEW: Added TDbLogRoute (Qiang)
 NEW: Added TDataRenderer and TItemDataRenderer (Qiang)
 NEW: Ticket#544 - Added TXCache (Wei)
+NEW: Ticket#729 - Added TActivePager (Christophe)
 
 Version 3.1.1 October 1, 2007
 =============================
